fix(ci): use npm start instead of standalone server for E2E tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -219,15 +219,15 @@ jobs:
           NODE_ENV: production
         run: npm run build
 
-      - name: Start standalone server
+      - name: Start server
         run: |
           set -euo pipefail
           cd apps/web
-          export PORT=3000
-          export NODE_ENV=production
-          echo "Starting standalone server..."
-          node ./.next/standalone/server.js &
+          npm start &
           echo $! > /tmp/web.pid
+        env:
+          PORT: "3000"
+          NODE_ENV: production
 
       - name: Wait for app
         run: |
