--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -251,6 +251,7 @@ jobs:
           ALLOW_TEST_RUNNER: "1"
           BASE_URL: http://localhost:3000
           DATABASE_URL: ${{ env.DATABASE_URL }}
+          E2E_SKIP_LOGIN_VERIFY: "1"
 
       - name: Stop server
         if: always()
