Enable optional env loading for tests

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "run:export-scheduler": "tsx scripts/run-export-scheduler.ts",
+    "run:maintenance": "tsx scripts/run-maintenance.ts",
     "test:upstash-e2e": "node ./scripts/run-upstash-e2e.js",
     "test:upstash-e2e:sh": "bash ./scripts/run-upstash-e2e.sh",
     "test:upstash-e2e:ps1": "powershell -File ./scripts/run-upstash-e2e.ps1",
@@ -39,6 +40,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.975.0",
+    "@aws-sdk/s3-request-presigner": "^3.975.0",
+    "@inductlite/shared": "file:../../packages/shared",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
+    "@opentelemetry/sdk-node": "^0.57.2",
+    "@opentelemetry/semantic-conventions": "^1.26.0",
     "@prisma/client": "^5.22.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
@@ -46,6 +53,7 @@
     "argon2": "^0.41.1",
     "date-fns": "^4.1.0",
     "iron-session": "^8.0.4",
+    "libphonenumber-js": "^1.12.35",
     "nanoid": "^5.0.9",
     "next": "16.1.5",
     "pg-boss": "^10.1.5",
@@ -56,15 +64,14 @@
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "set-interval-async": "^3.0.3",
-    "zod": "^3.24.1",
-    "@inductlite/shared": "file:../../packages/shared",
-    "libphonenumber-js": "^1.12.35"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "dotenv": "^16.4.7",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "^9.0.0",
     "@playwright/test": "^1.49.0",
-    "@testcontainers/postgresql": "^10.5.0",
+    "@testcontainers/postgresql": "^11.11.0",
     "@types/archiver": "^6.0.3",
     "@types/node": "^20.17.10",
     "@types/react": "19.2.9",
@@ -79,7 +86,7 @@
     "postcss": "^8.4.49",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.16",
-    "testcontainers": "^10.5.0",
+    "testcontainers": "^11.11.0",
     "tsx": "^4.19.2",
     "typescript": "^5.3.3",
     "vitest": "^4.0.18"
