--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -9,6 +9,7 @@ on:
     - cron: "0 3 * * 1" # weekly Monday 03:00 UTC
 
 permissions:
+  actions: read
   contents: read
   security-events: write
 
