Phase 1 infra hardening

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@
 # DATABASE (Required)
 # -----------------------------------------------------------------------------
 DATABASE_URL=postgresql://inductlite:inductlite_dev_password@localhost:5432/inductlite?schema=public
+# Direct connection string for migrations (Neon direct endpoint in production)
+DATABASE_DIRECT_URL=postgresql://inductlite:inductlite_dev_password@localhost:5432/inductlite?schema=public
 
 # -----------------------------------------------------------------------------
 # SECURITY - Session & Auth (Required)
@@ -16,6 +18,9 @@ DATABASE_URL=postgresql://inductlite:inductlite_dev_password@localhost:5432/indu
 # Session encryption key - MUST be at least 32 characters
 # Generate with: openssl rand -base64 32
 SESSION_SECRET=dev-secret-change-in-production-min-32-chars
+
+# Optional: previous secrets for rotation (comma-separated)
+# SESSION_SECRET_PREVIOUS=
 
 # Optional: separate secret for sign-out tokens (falls back to SESSION_SECRET)
 # SIGN_OUT_TOKEN_SECRET=
@@ -25,6 +30,12 @@ ADMIN_PASSWORD=Admin123!
 
 # Trust proxy headers (set to 1 behind a reverse proxy like nginx/cloudflare)
 TRUST_PROXY=0
+
+# Cron security (shared secret + optional IP allowlist)
+CRON_SECRET=dev-cron-secret-change-in-production
+# CRON_ALLOWED_IPS=203.0.113.10/32,198.51.100.0/24
+# CRON_ALLOW_GITHUB_ACTIONS=1
+# CRON_ALLOW_PRIVATE_IPS=0
 
 # -----------------------------------------------------------------------------
 # RATE LIMITING (Optional - Upstash Redis)
