--- a/.env.production.example
+++ b/.env.production.example
@@ -10,6 +10,8 @@
 # -----------------------------------------------------------------------------
 # Use SSL in production: ?sslmode=require
 DATABASE_URL=postgresql://user:password@host:5432/inductlite?schema=public&sslmode=require
+# Direct connection for migrations (Neon direct endpoint)
+DATABASE_DIRECT_URL=postgresql://user:password@host:5432/inductlite?schema=public&sslmode=require
 
 # -----------------------------------------------------------------------------
 # SECURITY (Required)
@@ -17,11 +19,20 @@ DATABASE_URL=postgresql://user:password@host:5432/inductlite?schema=public&sslmo
 # Generate with: openssl rand -base64 32
 SESSION_SECRET=
 
+# Optional: previous secrets for rotation (comma-separated)
+# SESSION_SECRET_PREVIOUS=
+
 # Optional: separate secret for sign-out tokens
 SIGN_OUT_TOKEN_SECRET=
 
 # Trust proxy headers (set to 1 behind reverse proxy)
 TRUST_PROXY=1
+
+# Cron security (shared secret + optional IP allowlist)
+CRON_SECRET=
+# CRON_ALLOWED_IPS=203.0.113.10/32,198.51.100.0/24
+CRON_ALLOW_GITHUB_ACTIONS=1
+CRON_ALLOW_PRIVATE_IPS=0
 
 # -----------------------------------------------------------------------------
 # RATE LIMITING (Recommended for production)
