--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -108,7 +108,7 @@ jobs:
           set -euo pipefail
           cd apps/web
           export PORT=3000
-          export NODE_ENV=production
+          export NODE_ENV=test
           node ./.next/standalone/server.js &
           echo $! > /tmp/web.pid
 
