--- a/.github/workflows/render-keep-alive.yml
+++ b/.github/workflows/render-keep-alive.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
       - name: Ping health endpoint
         run: |
-          curl --fail --show-error --silent "${RENDER_APP_URL}/health" > /dev/null
+          curl --fail --show-error --silent "$RENDER_APP_URL/health" > /dev/null
         env:
           RENDER_APP_URL: ${{ secrets.RENDER_APP_URL }}
 
       - name: Run export scheduler
         run: |
-          curl --fail --show-error --silent -H "x-cron-secret: ${CRON_SECRET}" "${RENDER_APP_URL}/api/cron/export-scheduler" > /dev/null
+          curl --fail --show-error --silent -H "x-cron-secret: $CRON_SECRET" "$RENDER_APP_URL/api/cron/export-scheduler" > /dev/null
         env:
           RENDER_APP_URL: ${{ secrets.RENDER_APP_URL }}
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
@@ -27,7 +27,7 @@ jobs:
         if: github.event.schedule == '15 2 * * *'
         run: |
           echo "Running daily maintenance cron"
-          curl --fail --show-error --silent -H "x-cron-secret: ${CRON_SECRET}" "${RENDER_APP_URL}/api/cron/maintenance" > /dev/null
+          curl --fail --show-error --silent -H "x-cron-secret: $CRON_SECRET" "$RENDER_APP_URL/api/cron/maintenance" > /dev/null
         env:
           RENDER_APP_URL: ${{ secrets.RENDER_APP_URL }}
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
