feat: add mfa magic links and site manager

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ SESSION_SECRET=dev-secret-change-in-production-min-32-chars
 # Optional: previous secrets for rotation (comma-separated)
 # SESSION_SECRET_PREVIOUS=
 
+# Optional: MFA encryption key (base64 32-byte)
+# MFA_ENCRYPTION_KEY=
+
 # Optional: separate secret for sign-out tokens (falls back to SESSION_SECRET)
 # SIGN_OUT_TOKEN_SECRET=
 
@@ -36,6 +39,9 @@ CRON_SECRET=dev-cron-secret-change-in-production
 # CRON_ALLOWED_IPS=203.0.113.10/32,198.51.100.0/24
 # CRON_ALLOW_GITHUB_ACTIONS=1
 # CRON_ALLOW_PRIVATE_IPS=0
+
+# Contractor magic links
+MAGIC_LINK_SECRET=dev-magic-link-secret-change-in-production
 
 # -----------------------------------------------------------------------------
 # RATE LIMITING (Optional - Upstash Redis)
@@ -69,6 +75,10 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Logging level: trace, debug, info, warn, error, fatal
 LOG_LEVEL=debug
+
+# Email (Resend)
+RESEND_API_KEY=
+RESEND_FROM=no-reply@inductlite.co.nz
 
 # -----------------------------------------------------------------------------
 # FEATURE FLAGS & GUARDRAILS
