--- a/.env.production.example
+++ b/.env.production.example
@@ -22,6 +22,9 @@ SESSION_SECRET=
 # Optional: previous secrets for rotation (comma-separated)
 # SESSION_SECRET_PREVIOUS=
 
+# Optional: MFA encryption key (base64 32-byte)
+# MFA_ENCRYPTION_KEY=
+
 # Optional: separate secret for sign-out tokens
 SIGN_OUT_TOKEN_SECRET=
 
@@ -33,6 +36,9 @@ CRON_SECRET=
 # CRON_ALLOWED_IPS=203.0.113.10/32,198.51.100.0/24
 CRON_ALLOW_GITHUB_ACTIONS=1
 CRON_ALLOW_PRIVATE_IPS=0
+
+# Contractor magic links
+MAGIC_LINK_SECRET=
 
 # -----------------------------------------------------------------------------
 # RATE LIMITING (Recommended for production)
@@ -58,6 +64,10 @@ S3_SECRET_ACCESS_KEY=
 NODE_ENV=production
 NEXT_PUBLIC_APP_URL=https://your-domain.com
 LOG_LEVEL=info
+
+# Email (Resend)
+RESEND_API_KEY=
+RESEND_FROM=
 
 # -----------------------------------------------------------------------------
 # FEATURE FLAGS
