--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "libphonenumber-js": "^1.12.35",
     "nanoid": "^5.0.9",
     "next": "16.1.5",
+    "otplib": "^12.0.1",
     "pg-boss": "^10.1.5",
     "pino": "^9.6.0",
     "pino-http": "^10.3.0",
@@ -63,6 +64,7 @@
     "puppeteer": "^24.36.1",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "resend": "^3.5.0",
     "set-interval-async": "^3.0.3",
     "zod": "^3.24.1"
   },
