ci: set DATABASE_DIRECT_URL in CI jobs to avoid Prisma P1012

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,13 @@
 # -----------------------------------------------------------------------------
 # DATABASE (Required)
 # -----------------------------------------------------------------------------
+# For Neon deployments: prefer the Neon pooler endpoint (port 6543) for runtime connections.
+# You can set `DATABASE_URL` to `NEON_POOLER_URL` in your deployment platform.
 DATABASE_URL=postgresql://inductlite:inductlite_dev_password@localhost:5432/inductlite?schema=public
 # Direct connection string for migrations (Neon direct endpoint in production)
 DATABASE_DIRECT_URL=postgresql://inductlite:inductlite_dev_password@localhost:5432/inductlite?schema=public
+# Optional: Neon pooler endpoint (port 6543) example
+NEON_POOLER_URL=postgresql://inductlite:inductlite_dev_password@localhost:6543/inductlite?schema=public
 
 # -----------------------------------------------------------------------------
 # SECURITY - Session & Auth (Required)
