--- a/.env.production.example
+++ b/.env.production.example
@@ -9,9 +9,12 @@
 # DATABASE (Required)
 # -----------------------------------------------------------------------------
 # Use SSL in production: ?sslmode=require
+# For Neon deployments, the pooler endpoint uses port 6543. Optionally set NEON_POOLER_URL and point DATABASE_URL to it.
 DATABASE_URL=postgresql://user:password@host:5432/inductlite?schema=public&sslmode=require
 # Direct connection for migrations (Neon direct endpoint)
 DATABASE_DIRECT_URL=postgresql://user:password@host:5432/inductlite?schema=public&sslmode=require
+# Optional: Neon pooler endpoint example (port 6543)
+NEON_POOLER_URL=postgresql://user:password@host:6543/inductlite?schema=public&sslmode=require
 
 # -----------------------------------------------------------------------------
 # SECURITY (Required)
