--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,11 @@ name: CI
 
 on:
   push:
-    branches: [main, develop]
+    branches: ["**"]
   pull_request:
     branches: [main, develop]
   # Allow manual runs from any branch when needed for debugging or retries
-  workflow_dispatch: { }
+  workflow_dispatch: {}
 
 permissions:
   contents: read
