--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,6 +58,7 @@
     "next": "16.1.5",
     "otplib": "^12.0.1",
     "pg-boss": "^10.1.5",
+    "qrcode.react": "^4.2.0",
     "pino": "^9.6.0",
     "pino-http": "^10.3.0",
     "pino-pretty": "^13.0.0",
