feat(ui): signatures, kiosk mode, and a11y compliance

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -82,7 +82,9 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-v8": "^4.0.18",
+    "@types/react-signature-canvas": "^1.0.5",
     "autoprefixer": "^10.4.20",
+    "axe-playwright": "^2.0.3",
     "eslint": "^9.0.0",
     "eslint-config-next": "16.1.5",
     "eslint-plugin-security-guardrails": "file:./eslint-plugin-security",
