feat(ui): signatures, kiosk mode, and a11y compliance

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,19 +58,19 @@
     "next": "16.1.5",
     "otplib": "^12.0.1",
     "pg-boss": "^10.1.5",
-    "qrcode.react": "^4.2.0",
     "pino": "^9.6.0",
     "pino-http": "^10.3.0",
     "pino-pretty": "^13.0.0",
     "puppeteer": "^24.36.1",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "resend": "^3.5.0",
     "set-interval-async": "^3.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "dotenv": "^16.4.7",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "^9.0.0",
     "@playwright/test": "^1.49.0",
@@ -79,12 +79,13 @@
     "@types/node": "^20.17.10",
     "@types/react": "19.2.9",
     "@types/react-dom": "19.2.3",
+    "@types/react-signature-canvas": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-v8": "^4.0.18",
-    "@types/react-signature-canvas": "^1.0.5",
     "autoprefixer": "^10.4.20",
-    "axe-playwright": "^2.0.3",
+    "axe-playwright": "^2.2.2",
+    "dotenv": "^16.4.7",
     "eslint": "^9.0.0",
     "eslint-config-next": "16.1.5",
     "eslint-plugin-security-guardrails": "file:./eslint-plugin-security",
