--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint . --max-warnings=0",
     "typecheck": "tsc --noEmit",
@@ -71,6 +71,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "^9.0.0",
     "@playwright/test": "^1.49.0",
