--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,7 +36,8 @@
     "prisma:validate": "prisma validate",
     "prisma:format:check": "prisma format --check",
     "test:e2e:smoke": "playwright test e2e/public-signin.spec.ts e2e/admin-auth.spec.ts e2e/csrf-security.spec.ts --project=chromium --workers=1",
-    "test:e2e:full": "playwright test e2e --project=chromium --project=firefox --project=webkit --workers=1"
+    "test:e2e:full": "playwright test e2e --project=chromium --project=firefox --project=webkit --workers=8 --reporter=line --grep-invert \"Visual Regression|Kiosk Mode|Accessibility Checks|Admin Export UI & Processing|VRT -\"",
+    "test:e2e:full:all": "playwright test e2e --project=chromium --project=firefox --project=webkit --workers=1 --reporter=line"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.975.0",
