--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,10 +20,11 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     ".next/types/**/*.ts",
-    "prisma/**/*.ts"
+    "prisma/**/*.ts",
+    "*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".next"]
 }
