--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
+    "test:integration": "turbo run test:integration",
+    "test:coverage": "turbo run test:coverage",
+    "test:e2e:smoke": "turbo run test:e2e:smoke",
+    "test:e2e:full": "turbo run test:e2e:full",
+    "test:e2e:full:all": "turbo run test:e2e:full:all",
+    "test:visual": "turbo run test:visual",
     "db:generate": "turbo run db:generate",
     "db:migrate": "turbo run db:migrate",
     "db:push": "turbo run db:push",
