chore: harden guardrails and ship policy enforcement updates

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,9 @@ SESSION_SECRET=dev-secret-change-in-production-min-32-chars
 # Optional: MFA encryption key (base64 32-byte)
 # MFA_ENCRYPTION_KEY=
 
+# Data encryption key for sensitive fields at rest (minimum 32 chars)
+DATA_ENCRYPTION_KEY=dev-data-encryption-key-change-in-production
+
 # Optional: separate secret for sign-out tokens (falls back to SESSION_SECRET)
 # SIGN_OUT_TOKEN_SECRET=
 
@@ -91,25 +94,61 @@ RESEND_FROM=no-reply@inductlite.co.nz
 FEATURE_EXPORTS_ENABLED=true
 FEATURE_UPLOADS_ENABLED=true
 FEATURE_PUBLIC_SIGNIN_ENABLED=true
+FEATURE_VISUAL_REGRESSION_ENABLED=false
+
+# Environment budget tier and compute counters
+ENV_BUDGET_TIER=MVP
+MAX_MONTHLY_COMPUTE_INVOCATIONS=1200000
+MAX_MONTHLY_COMPUTE_RUNTIME_MINUTES=2500
 
 # Export limits (per ARCHITECTURE_GUARDRAILS.md)
 MAX_EXPORT_ROWS=50000
 MAX_EXPORT_BYTES=104857600
+MAX_EXPORT_BYTES_GLOBAL_PER_DAY=2147483648
+MAX_EXPORT_DOWNLOAD_BYTES_PER_COMPANY_PER_DAY=536870912
+MAX_EXPORT_DOWNLOAD_BYTES_GLOBAL_PER_DAY=5368709120
 MAX_EXPORTS_PER_COMPANY_PER_DAY=5
 MAX_EXPORT_RUNTIME_SECONDS=120
+MAX_CONCURRENT_EXPORTS_GLOBAL=1
+MAX_CONCURRENT_EXPORTS_PER_COMPANY=1
+EXPORT_OFFPEAK_ONLY=false
+EXPORT_OFFPEAK_AUTO_ENABLE_THRESHOLD_PERCENT=20
+EXPORT_OFFPEAK_AUTO_ENABLE_QUEUE_DELAY_SECONDS=60
+EXPORT_OFFPEAK_AUTO_ENABLE_DAYS=7
 
 # Upload limits
 MAX_UPLOAD_MB=5
-UPLOAD_ALLOWED_MIME=pdf,jpg,jpeg,png
+UPLOAD_ALLOWED_MIME=application/pdf,image/jpeg,image/png
+UPLOAD_ALLOWED_EXTENSIONS=pdf,jpg,jpeg,png
+UPLOAD_REQUIRE_SERVER_MIME_SNIFF=true
+UPLOAD_REQUIRE_MAGIC_BYTES=true
 
 # Retention (days)
 FILES_RETENTION_DAYS=90
 EXPORTS_RETENTION_DAYS=30
 AUDIT_RETENTION_DAYS=90
+LOG_RETENTION_DAYS=14
+
+# Per-tenant hard quotas
+MAX_TENANT_STORAGE_GB=5
+MAX_TENANT_EGRESS_GB_PER_MONTH=20
+MAX_TENANT_JOB_MINUTES_PER_MONTH=300
+MAX_TENANT_COMPUTE_INVOCATIONS_PER_MONTH=250000
 
 # SMS (disabled by default - paid feature)
 SMS_ENABLED=false
 MAX_MESSAGES_PER_COMPANY_PER_MONTH=0
+MAX_EMAILS_PER_COMPANY_PER_MONTH=500
+MAX_EMAILS_GLOBAL_PER_DAY=2000
+
+# Public/admin abuse controls
+RL_PUBLIC_SLUG_PER_IP_PER_MIN=30
+RL_SIGNIN_PER_IP_PER_MIN=30
+RL_SIGNIN_PER_SITE_PER_MIN=200
+RL_SIGNOUT_PER_IP_PER_MIN=30
+RL_ADMIN_PER_USER_PER_MIN=60
+RL_ADMIN_PER_IP_PER_MIN=120
+RL_ADMIN_MUTATION_PER_COMPANY_PER_MIN=60
 
 # CSP (Content-Security-Policy)
 # Enforced CSP is applied via `apps/web/src/middleware.ts`.
