--- a/.env.production.example
+++ b/.env.production.example
@@ -28,6 +28,9 @@ SESSION_SECRET=
 # Optional: MFA encryption key (base64 32-byte)
 # MFA_ENCRYPTION_KEY=
 
+# Data encryption key for sensitive fields at rest (minimum 32 chars)
+DATA_ENCRYPTION_KEY=
+
 # Optional: separate secret for sign-out tokens
 SIGN_OUT_TOKEN_SECRET=
 
