--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test:e2e:full": "turbo run test:e2e:full",
     "test:e2e:full:all": "turbo run test:e2e:full:all",
     "test:visual": "turbo run test:visual",
+    "guardrails-lint": "node scripts/guardrails-lint.mjs",
+    "guardrails-tests": "node scripts/guardrails-tests.mjs && npm run -w apps/web test -- src/lib/cost/__tests__/compute-counters.test.ts src/lib/api/__tests__/response.guardrails.test.ts",
+    "policy-check": "node scripts/policy-check.mjs",
     "db:generate": "turbo run db:generate",
     "db:migrate": "turbo run db:migrate",
     "db:push": "turbo run db:push",
