--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,68 @@ env:
   TEST_RUNNER_SECRET_KEY: ${{ secrets.TEST_RUNNER_SECRET_KEY }}
 
 jobs:
-  quality:
-    name: Lint • Typecheck • Unit
+  guardrails-lint:
+    name: guardrails-lint
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: "24"
+          cache: "npm"
+
+      - name: Install deps (workspace)
+        run: npm ci
+
+      - name: Run guardrails-lint
+        run: npm run guardrails-lint
+
+  policy-check:
+    name: policy-check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: "24"
+          cache: "npm"
+
+      - name: Install deps (workspace)
+        run: npm ci
+
+      - name: Run policy-check
+        run: npm run policy-check
+
+  guardrails-tests:
+    name: guardrails-tests
+    runs-on: ubuntu-latest
+    needs: [guardrails-lint, policy-check]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: "24"
+          cache: "npm"
+
+      - name: Install deps (workspace)
+        run: npm ci
+
+      - name: Run guardrails-tests
+        run: npm run guardrails-tests
+
+  quality:
+    name: Lint Typecheck Unit
+    runs-on: ubuntu-latest
+    needs: [guardrails-lint, policy-check, guardrails-tests]
     services:
       postgres:
         image: postgres:16-alpine
@@ -315,3 +374,4 @@ jobs:
             apps/web/playwright-report/**
             apps/web/playwright-output.txt
           retention-days: 7
+
